tests/ui/cfg/cfg-method-receiver.stderr
error: removing an expression is not supported in this position
  --> $DIR/cfg-method-receiver.rs:9:17
   |
LL |     cbor_map! { #[cfg(test)] 4};
   |                 ^^^^^^^^^^^^

error[E0689]: can't call method `signum` on ambiguous numeric type `{integer}`
  --> $DIR/cfg-method-receiver.rs:3:14
   |
LL | / macro_rules! cbor_map {
LL | |     ($key:expr) => {
LL | |         $key.signum();
   | |              ^^^^^^
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `cbor_map!`
...
LL |       cbor_map! { #[cfg(test)] 4};
   |       --------------------------- in this macro invocation
   |
help: you must specify a concrete type for this numeric value, like `i32`
   |
LL |     cbor_map! { #[cfg(test)] 4_i32};
   |                              ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0689`.
